<resources>
    <string name="app_name">Playlist maker</string>
    <string name="ask">Вопрос:</string>
    <string name="text_2_10">2/10</string>
    <string name="rating_str">Рейтинг этого фильма больше, чем 9?:</string>
    <string name="no">Нет</string>
    <string name="yes">Да</string>
    <string name="find">Поиск</string>
    <string name="mediateka">Медиатека</string>
    <string name="settings">Настройки</string>
    <string name="dark_theme">Темная тема</string>
    <string name="share_App">Поделиться приложением</string>
    <string name="support">Написать в поддержку</string>
    <string name="terms">Пользовательское соглашение</string>
    <string name="find_string">Поиск</string>
    <string name="titleEmailTest" translatable="false">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="subjectTest" translatable="false">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="promoText" translatable="false">https://practicum.yandex.ru/android-developer/</string>
    <string name="yandexText" translatable="false">https://yandex.ru/legal/practicum_offer/</string>
    <string name="what_go_wrong" translatable="false">Ничего не нашлось</string>
    <string name="error_of_server" translatable="false">Что-то пошло не так! Код ответа сервера</string>
    <string name="to_wrong" translatable="false">Что-то пошло не так!</string>
    <string name="problem_connect" translatable="false">Проблемы со связью</string>
    <string name="problem_connect_topic" translatable="false">Загрузка не удалась. Проверьте подключение к интернету</string>
    <string name="update">Обновить</string>
    <string name="titleFind">Вы искали</string>
    <string name="clearFindHistory">Очистить историю</string>
    <string name="nameSound" translatable="false">Yesterday (Remastered 2009)</string>
    <string name="nameSinger" translatable="false">The Beatles</string>
    <string name="currentTime" translatable="false">00 : 00</string>
    <string name="nameLongTime">Длительность</string>
    <string name="longTime" translatable="false">5:30</string>
    <string name="nameAlbum">Альбом</string>
    <string name="album" translatable="false">Yesterday (Remastered 2009)</string>
    <string name="nameYear">Год</string>
    <string name="year" translatable="false">1965</string>
    <string name="nameGenre">Жанр</string>
    <string name="genre" translatable="false">Rock</string>
    <string name="nameCountry">Страна</string>
    <string name="country">Великобритания</string>
    <string name="testMail" translatable="false">solo300m@yandex.ru</string>
</resources>
