<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/deepest_blue"
    android:padding="20dp"
    >
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ask"
            android:textColor="#ffffff"
            android:textSize="20sp"
            android:layout_gravity="start"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_2_10"
            android:textColor="#ffffff"
            android:textSize="20sp"
            android:layout_gravity="end"/>
    </FrameLayout>
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="20dp"
        android:layout_weight="1"
        android:scaleType="centerCrop"
        android:src="@drawable/poster"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginHorizontal="63dp"
        android:layout_marginTop="33dp"
        android:gravity="center"
        android:text="@string/rating_str"
        android:textColor="#ffffff"
        android:textSize="23sp"
        android:textStyle="bold"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="33dp"
        android:orientation="horizontal">
        <Button
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_marginEnd="10dp"
            android:layout_weight="1"
            android:backgroundTint="#ffffff"
            android:text="@string/no"
            android:textColor="@color/deepest_blue"/>
        <Button
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_marginStart="10dp"
            android:layout_weight="1"
            android:backgroundTint="#ffffff"
            android:text="@string/yes"
            android:textColor="@color/deepest_blue"/>

    </LinearLayout>
</LinearLayout>
