<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SettingActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="@dimen/size_24"
        >
        <ImageView
            android:id="@+id/backSettingToMain"
            android:src="@drawable/left"
            style="@style/ComeBackIcon"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/settings"
            style="@style/TitleActivity"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/dark_theme"
            style="@style/SubMenuActivity"/>
        <ImageView
            android:id="@+id/control"
            android:src="@drawable/control"
            android:layout_width="@dimen/button_48_size"
            android:layout_height="@dimen/size_40"
            android:paddingHorizontal="@dimen/size_9"
            android:layout_gravity="center"
            android:layout_marginEnd="@dimen/size_6"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/share_App"
            style="@style/SubMenuActivity"/>
        <ImageView
            android:id="@+id/sareButton"
            android:src="@drawable/share_24"
            style="@style/FunctionIcon"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/support"
            style="@style/SubMenuActivity"/>
        <ImageView
            android:id="@+id/supportButton"
            android:src="@drawable/support"
            style="@style/FunctionIcon"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/terms"
            style="@style/SubMenuActivity"/>
        <ImageView
            android:id="@+id/termsButton"
            android:src="@drawable/rigth"
            style="@style/FunctionIcon"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1">
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:id="@+id/findComeButton"
            app:icon="@drawable/find"
            android:text="Поиск"
            style="@style/ButtonMidleStyle"/>
        <Button
            android:id="@+id/mediaComeButton"
            app:icon="@drawable/mediateka"
            android:text="Медиатека"
            style="@style/ButtonMidleStyle"/>
        <Button
            android:id="@+id/setComeButton"
            app:icon="@drawable/setting"
            android:text="Настройка"
            app:iconTint="@color/blue_yp"
            style="@style/ButtonMidleStyle"/>
    </LinearLayout>
</LinearLayout>
