<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorAccent"    
    tools:context=".ui.audioplayer.PlayerActivity"
    android:scrollbars="vertical"
    android:id="@+id/formPlayer"
    >

    <ImageButton
        android:id="@+id/backPlayer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/size_24"
        android:background="?attr/colorAccent"
        android:paddingVertical="@dimen/size_12"
        android:paddingStart="@dimen/size_24"
        android:src="@drawable/left"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/leftBoarder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.0667" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/reghtBoarder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.933" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/leftBarrier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="@dimen/size_16" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/rightBarrier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="@dimen/size_16" />

    <ImageView
        android:id="@+id/albumPicture"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/size_26"
        android:background="@xml/square"
        android:backgroundTint="?attr/colorAccent"
        android:clipToOutline="true"
        android:scaleType="fitXY"
        android:src="@drawable/barsik"
        app:layout_constraintDimensionRatio="h,1:0.9"
        app:layout_constraintEnd_toStartOf="@id/reghtBoarder"
        app:layout_constraintStart_toEndOf="@id/leftBoarder"
        app:layout_constraintTop_toBottomOf="@id/backPlayer" />

    <TextView
        android:id="@+id/nameSouth"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ellipsize="end"
        android:maxLines="1"
        app:layout_constrainedWidth="true"
        app:layout_constraintHorizontal_bias="0.0"
        android:layout_marginTop="@dimen/size_24"
        android:fontFamily="@font/ys_display_medium"
        android:text="@string/nameSound"
        android:textFontWeight="400"
        android:textSize="@dimen/text_size_22"
        app:layout_constraintStart_toEndOf="@id/leftBoarder"
        app:layout_constraintTop_toBottomOf="@id/albumPicture"
        app:layout_constraintEnd_toStartOf="@id/reghtBoarder"
        app:layout_constraintVertical_weight="1" />

    <TextView
        android:id="@+id/nameSinger"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/size_12"
        android:fontFamily="@font/ys_display_medium"

        android:text="@string/nameSinger"
        android:textFontWeight="400"
        android:textSize="@dimen/text_size_14"
        app:layout_constraintStart_toEndOf="@id/leftBoarder"
        app:layout_constraintTop_toBottomOf="@id/nameSouth"
        app:layout_constraintVertical_weight="1" />

    <ImageView
        android:id="@+id/addButtonLeft"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/addleftbutton"
        app:layout_constraintBottom_toBottomOf="@id/PlayButton"
        app:layout_constraintEnd_toStartOf="@id/PlayButton"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toEndOf="@id/leftBoarder"
        app:layout_constraintTop_toTopOf="@id/PlayButton" />

    <ImageView
        android:id="@+id/PlayButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/playbutton"
        app:layout_constraintBottom_toTopOf="@id/nameLongTime"
        app:layout_constraintEnd_toStartOf="@+id/likeButton"
        app:layout_constraintStart_toEndOf="@id/addButtonLeft"
        app:layout_constraintTop_toBottomOf="@id/nameSinger"
        app:layout_constraintVertical_chainStyle="spread_inside"
        app:layout_constraintVertical_weight="1" />

    <ImageView
        android:id="@+id/likeButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/likebutton"
        app:layout_constraintBottom_toBottomOf="@id/PlayButton"
        app:layout_constraintEnd_toStartOf="@id/reghtBoarder"
        app:layout_constraintStart_toEndOf="@id/PlayButton"
        app:layout_constraintTop_toTopOf="@id/PlayButton" />


        <TextView
            android:id="@+id/currentTimePlay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/size_4"
            android:fontFamily="@font/ys_display_medium"
            android:text="@string/currentTime"
            android:textFontWeight="500"
            android:textSize="@dimen/text_size_14"
            app:layout_constraintEnd_toStartOf="@id/reghtBoarder"
            app:layout_constraintStart_toEndOf="@id/leftBoarder"
            app:layout_constraintTop_toBottomOf="@id/PlayButton" />
        <TextView
            android:id="@+id/nameLongTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/size_24"
            android:fontFamily="@font/ys_display_medium"
            android:paddingVertical="@dimen/size_9"
            android:text="@string/nameLongTime"
            android:textColor="?attr/colorPrimarySurface"
            android:textFontWeight="500"

            android:textSize="@dimen/text_size_13"
            app:layout_constraintBottom_toTopOf="@id/nameAlbum"
            app:layout_constraintEnd_toStartOf="@id/longTime"
            app:layout_constraintHorizontal_chainStyle="spread_inside"
            app:layout_constraintStart_toEndOf="@id/leftBarrier"
            app:layout_constraintTop_toBottomOf="@id/currentTimePlay"
            app:layout_constraintVertical_weight="1" />

        <TextView
            android:id="@+id/longTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/ys_display_medium"
            android:paddingVertical="@dimen/size_9"
            android:text="@string/longTime"
            android:textColor="?attr/colorPrimary"
            android:textSize="@dimen/text_size_13"
            app:layout_constraintBottom_toBottomOf="@id/nameLongTime"
            app:layout_constraintEnd_toStartOf="@id/rightBarrier"
            app:layout_constraintStart_toEndOf="@id/nameLongTime" />

        <TextView
            android:id="@+id/nameAlbum"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/ys_display_medium"
            android:paddingVertical="@dimen/size_9"
            android:text="@string/nameAlbum"
            android:textColor="?attr/colorPrimarySurface"
            android:textFontWeight="500"
            android:textSize="@dimen/text_size_13"
            app:layout_constraintBottom_toTopOf="@id/nameYear"
            app:layout_constraintEnd_toStartOf="@id/album"
            app:layout_constraintHorizontal_chainStyle="spread_inside"
            app:layout_constraintStart_toEndOf="@id/leftBarrier"
            app:layout_constraintTop_toBottomOf="@id/nameLongTime"
            app:layout_constraintVertical_weight="1" />

        <TextView
            android:id="@+id/album"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/ys_display_medium"
            android:paddingVertical="@dimen/size_9"
            android:text="@string/album"
            android:textColor="?attr/colorPrimary"
            android:textSize="@dimen/text_size_13"
            app:layout_constraintBottom_toBottomOf="@id/nameAlbum"
            app:layout_constraintEnd_toStartOf="@id/rightBarrier"
            app:layout_constraintStart_toEndOf="@id/nameAlbum" />

        <TextView
            android:id="@+id/nameYear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/ys_display_medium"
            android:paddingVertical="@dimen/size_9"
            android:text="@string/nameYear"
            android:textColor="?attr/colorPrimarySurface"
            android:textFontWeight="500"
            android:textSize="@dimen/text_size_13"
            app:layout_constraintBottom_toTopOf="@id/nameGenre"
            app:layout_constraintEnd_toStartOf="@id/year"
            app:layout_constraintHorizontal_chainStyle="spread_inside"
            app:layout_constraintStart_toEndOf="@id/leftBarrier"
            app:layout_constraintTop_toBottomOf="@id/nameAlbum"
            app:layout_constraintVertical_weight="1" />

        <TextView
            android:id="@+id/year"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/ys_display_medium"
            android:paddingVertical="@dimen/size_9"
            android:text="@string/year"
            android:textColor="?attr/colorPrimary"
            android:textSize="@dimen/text_size_13"
            app:layout_constraintBottom_toBottomOf="@id/nameYear"
            app:layout_constraintEnd_toStartOf="@id/rightBarrier"
            app:layout_constraintStart_toEndOf="@id/nameYear" />

        <TextView
            android:id="@+id/nameGenre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/ys_display_medium"
            android:paddingVertical="@dimen/size_9"
            android:text="@string/nameGenre"
            android:textColor="?attr/colorPrimarySurface"
            android:textFontWeight="500"
            android:textSize="@dimen/text_size_13"
            app:layout_constraintBottom_toTopOf="@id/nameCountry"
            app:layout_constraintEnd_toStartOf="@id/genre"
            app:layout_constraintHorizontal_chainStyle="spread_inside"
            app:layout_constraintStart_toEndOf="@id/leftBarrier"
            app:layout_constraintTop_toBottomOf="@id/nameYear"
            app:layout_constraintVertical_weight="1" />

        <TextView
            android:id="@+id/genre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/ys_display_medium"
            android:paddingVertical="@dimen/size_9"
            android:text="@string/genre"
            android:textColor="?attr/colorPrimary"
            android:textSize="@dimen/text_size_13"
            app:layout_constraintBottom_toBottomOf="@id/nameGenre"
            app:layout_constraintEnd_toStartOf="@id/rightBarrier"
            app:layout_constraintStart_toEndOf="@id/nameGenre" />

        <TextView
            android:id="@+id/nameCountry"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/ys_display_medium"
            android:paddingTop="@dimen/size_9"
            android:paddingBottom="@dimen/size_24"
            android:text="@string/nameCountry"
            android:textColor="?attr/colorPrimarySurface"
            android:textFontWeight="500"
            android:textSize="@dimen/text_size_13"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/country"
            app:layout_constraintHorizontal_chainStyle="spread_inside"
            app:layout_constraintStart_toEndOf="@id/leftBarrier"
            app:layout_constraintTop_toBottomOf="@id/nameGenre"
            app:layout_constraintVertical_weight="1" />

        <TextView
            android:id="@+id/country"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/ys_display_medium"
            android:paddingTop="@dimen/size_9"
            android:paddingBottom="@dimen/size_24"
            android:text="@string/country"
            android:textColor="?attr/colorPrimary"
            android:textSize="@dimen/text_size_13"
            app:layout_constraintBottom_toBottomOf="@id/nameCountry"
            app:layout_constraintTop_toTopOf="@id/nameCountry"
            app:layout_constraintEnd_toStartOf="@id/rightBarrier"
            app:layout_constraintStart_toEndOf="@id/nameCountry" />

</androidx.constraintlayout.widget.ConstraintLayout>
